--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "next": "13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "prettier": "^2.8.8"
   }
 }
