--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "^6.0.0-rc.1"
+    "styled-components": "^6.0.0-rc.1",
+    "swr": "^2.1.5"
   },
   "devDependencies": {
     "prettier": "^2.8.8"
