--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "moment": "^2.29.4",
+    "mongoose": "^7.2.1",
     "next": "13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
