--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-multi-carousel": "^2.8.4",
     "server-only": "^0.0.1",
     "styled-components": "^6.0.0-rc.1",
     "swr": "^2.1.5"
