import react-slick-slider & fix GetSearchResults by commenting out useEffect

--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-multi-carousel": "^2.8.4",
+    "react-slick": "^0.29.0",
     "server-only": "^0.0.1",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.0-rc.1",
+    "swiper": "^9.3.2",
     "swr": "^2.1.5"
   },
   "devDependencies": {
